Ajuste qdo fechar minha lista

--- a/client/src/app/components/my-list/my-list.component.html
+++ b/client/src/app/components/my-list/my-list.component.html
@@ -12,7 +12,7 @@
 
   <div class="lista" [ngStyle]="{'display': isProductsVisible}">
 
-    <button class="btn btn-bbt fechar" type="button" (click)="toggleLista(); toggleVerProduto()" title="Fechar" aria-label="Fechar">
+    <button class="btn btn-bbt fechar" type="button" (click)="toggleLista()" title="Fechar" aria-label="Fechar">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
         <g fill="none" stroke="#6c757d" stroke-width="1">
           <path d="M2 14L14 2M2 2l12 12"/>
