--- a/client/src/app/components/my-list/my-list.component.scss
+++ b/client/src/app/components/my-list/my-list.component.scss
@@ -47,7 +47,7 @@
   .itens {
     font-family: 'Courier New', Courier, monospace;
     background-color: var(--purple);
-    padding: 5px;
+    padding: 3px 5px;
     border-radius: 3px;
     color: white;
     letter-spacing: .01em;
