--- a/client/src/app/components/produto/produto.component.scss
+++ b/client/src/app/components/produto/produto.component.scss
@@ -94,5 +94,25 @@ h3 {
     }
     
   }
-  
+
+  .mini-loader {
+    animation: load 0.5s steps(8, end) infinite;
+    border-radius: 50%;
+    box-sizing: border-box;
+    box-shadow:
+      0 -6px 0 rgba(255,255,255,0.8),
+      6px 0px 1px rgba(255,255,255,0.6),
+      0px 6px 2px rgba(255,255,255,0.4),
+      -6px 0px 3px rgba(255,255,255,0.2);
+    display: inline-block;
+    height: 4px;
+    width: 4px;
+    margin: 0 10px 4px 5px;
+  }
+
+}
+
+@keyframes load {
+  0% { transform: rotate(0); }
+  100% { transform: rotate(360deg); }
 }
