--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,7 +1,12 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
+:root {
+  --bbt-purple: #645cc1;
+}
+
 $base-lila: #CFB4ED;
+$ease-in-out-quart: cubic-bezier(0.770,  0.000, 0.175, 1.000);
 
 body {
   color: var(--gray);
@@ -23,7 +28,7 @@ h1 {
 }
 
 a {
-  color: var(--purple);
+  color: var(--bbt-purple);
 }
 
 .jumbotron {
@@ -112,4 +117,42 @@ footer {
     color: white; 
   }
 
+}
+
+
+.loading {
+  color:var(--bbt-purple );
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  
+  &::before {
+    animation: motion 3s $ease-in-out-quart infinite;
+    background-color: currentColor;
+    border-radius: 50%;
+    content: '';
+    display: block;
+    height: 20px;
+    width: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+}
+
+@keyframes motion {
+  0% {
+    transform: translateX(0) scale(1)
+  }
+  25% {
+    transform: translateX(-50px) scale(0.3)
+  }
+  50% {
+    transform: translateX(0) scale(1)
+  }
+  75% {
+    transform: translateX(50px) scale(0.3)
+  }
+  100% {
+    transform: translateX(0) scale(1)
+  }
 }
