--- a/client/src/app/pages/home/product-list.component.html
+++ b/client/src/app/pages/home/product-list.component.html
@@ -5,7 +5,10 @@
     <a ngbNavLink>Bebê</a>
     <ng-template ngbNavContent>
       <ol class="produtos">
-        <li *ngFor="let produto of listaProdutos">
+        <li 
+          *ngFor="let produto of listaProdutos"
+          [ngStyle]="{'display': produto.status != statusProduto.reservado ? 'block' : 'none' }"
+        >
           <bt-produto 
           #thisProdutoComponent
           [produto]="produto"
@@ -19,7 +22,10 @@
     <a ngbNavLink>Mamãe</a>
     <ng-template ngbNavContent>
        <ol class="produtos">
-        <li *ngFor="let produto of listaProdutos">
+        <li 
+          *ngFor="let produto of listaProdutos"
+          [ngStyle]="{'display': produto.status != statusProduto.reservado ? 'block' : 'none' }"
+        >
           <bt-produto 
           #thisProdutoComponent
           [produto]="produto"
@@ -34,7 +40,10 @@
     <a ngbNavLink>Papai</a>
     <ng-template ngbNavContent>
        <ol class="produtos">
-        <li *ngFor="let produto of listaProdutos">
+        <li 
+          *ngFor="let produto of listaProdutos"
+          [ngStyle]="{'display': produto.status != statusProduto.reservado ? 'block' : 'none' }"
+        >
           <bt-produto 
           #thisProdutoComponent
           [produto]="produto"
@@ -48,12 +57,15 @@
     <a ngbNavLink>Família</a>
     <ng-template ngbNavContent>
        <ol class="produtos">
-        <li *ngFor="let produto of listaProdutos">
-          <bt-produto 
-          #thisProdutoComponent
-          [produto]="produto"
-          (reservaProduto)="reservarProduto(produto, thisProdutoComponent)"
-            ></bt-produto>
+        <li 
+          *ngFor="let produto of listaProdutos"
+          [ngStyle]="{'display': produto.status != statusProduto.reservado ? 'block' : 'none' }"
+        >
+            <bt-produto 
+            #thisProdutoComponent
+            [produto]="produto"
+            (reservaProduto)="reservarProduto(produto, thisProdutoComponent)"
+              ></bt-produto>
         </li>
       </ol>
     </ng-template>
